--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,11 @@ resilience4j.retry:
         - org.springframework.web.client.ResourceAccessException
         - org.springframework.web.client.HttpServerErrorException
       ignore-exceptions:
-        - com.krawenn.lol.exception.RiotGamesBusinessException 
+        - com.krawenn.lol.exception.RiotGamesBusinessException
+
+springdoc:
+  api-docs:
+    path: /api/league/v3/api-docs
+  swagger-ui:
+    path: /api/league/swagger-ui.html
+    url: /api/league/v3/api-docs
